exercises/05_function_like/04_routes/tests/fail/missing_arrow.stderr
error: expected `=>`
  --> tests/fail/missing_arrow.rs:11:17
   |
11 |         GET "/" index,
   |                 ^^^^^
